--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,13 @@
-<html>
-    <head>
-       <title>hatztah's blog</title>
-     </head>
-          
+{% extends 'blog/base.html' %}
 
-          <div>
-    <p>Hi there!</p>
-    <p>It works!</p>
-  </div>
-  <div>
-    <h1><a href="/">Django Girls Blog</a></h1>
-</div>
-
+{% block content %}
 {% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaks }}</p>
-    </div>
+            <div class="post">
+              <div class="date">
+                  <p>published: {{ post.published_date }}</p>
+                </div>
+              <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaks }}</p>
+          </div>
 {% endfor %}
-</html>
+{% endblock %}
